# HiddenEngine

./: .gitignore  CMakeLists.txt  Makefile  README.md  game  hidden  hidengine  library_list.txt  premake5.lua  test_code.txt
shaders/: basic_shader.fs  basic_shader.vs  texture_shader.fs  texture_shader.vs
src/: CmakeLists.txt  main.cpp
src/common/: path_dict.h  read_file.h
src/engine-core/game-engine/: engine.cpp  engine.h
src/engine-core/logger/: logger.cpp  logger.h
src/engine-core/renderer/: renderer.cpp  renderer.h
src/engine-core/window/: window.cpp  window.h
src/graphics-primitives/: camera.cpp  camera.h  glError_checker.h  mesh.cpp  mesh.h  model_loader.cpp  model_loader.h  render_command.cpp  render_command.h  shader.cpp  shader.h  terrain.cpp  terrain.h  texture.cpp  texture.h  textured_mesh.cpp  textured_mesh.h  vertex.h
src/renderer/render-manager/: renderer.cpp  renderer.h
